Changes for 2.5.0

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.4.1rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.4.0

2.4.0rc3 was released as 2.4.0 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.0rc3

New features:
A.F....... [ZBX-1357] updated Polish and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-8734] fixed IPMI pollers not starting properly on the server (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.4.0rc2

New features:
A.F....... [ZBX-1357] updated Japanese, Polish and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBX-8724] fixed daemon crash when a runtime control is issued during shutdown (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.4.0rc1

Bug fixes:
..F....... [ZBX-8716] fixed not being able to add trigger dependencies in the trigger mass update form (Pavels)
..F....... [ZBX-8573] fixed date part form inputs (month, day, hour, minute) to be consistent and have leading zero when needed (Krists)
..F....... [ZBX-8717] fixed error in the action operation configuration form when switching operation types (Krists)
..F....... [ZBX-8685] fixed ordering of graphs in simple graph prototype and graph prototype screen elements (Krists)
..F....... [ZBX-8662] fixed multiselect and text input alignment (Pavels)
..F....... [ZBX-8715] fixed item flex interval updating in item massupdate (Krists)
..F....... [ZBX-8710] fixed LLD graph prototype screen items to be displayed correctly when containing item has colspan/rowspan set (Krists)