@@ -141,7 +141,9 @@ extern int	CONFIG_UNSAFE_USER_PARAMETERS;
 #define ZBX_CPU_STATE_IOWAIT	5
 #define ZBX_CPU_STATE_SOFTIRQ	6
 #define ZBX_CPU_STATE_STEAL	7
-#define ZBX_CPU_STATE_COUNT	8
+#define ZBX_CPU_STATE_GCPU	8
+#define ZBX_CPU_STATE_GNICE	9
+#define ZBX_CPU_STATE_COUNT	10
 
 #define ZBX_PROC_STAT_ALL	0
 #define ZBX_PROC_STAT_RUN	1
