@@ -1,6 +1,7 @@
 Changes for 2.5.0
 
 New features:
+...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)
 
 Bug fixes:
 
